replaced barcode with pid in orders, enhanced other minor functionalities